@@ -1,0 +1,4 @@
+DIST puppet-module-0.3.0.gem 98304 RMD160 afbd08a0bdff6577344a14826d05e1ca5340c577 SHA1 a96df0bf3478eec53fdb9261770d798f56149e7c SHA256 a1ecf9dc92c662bc1aae74ae56e24575a13412b99c37689e7917001326d4c581
+EBUILD puppet-module-0.3.0.ebuild 761 RMD160 2d63a5ff7852afd51b31d10b7852a8627583934d SHA1 3b1ff5f13fb2d3196b6d667486338d5c09141746 SHA256 1bedb9b651933115fcba36d8a028418ffc00c2f47ad2f6564d556067ed74dc36
+MISC ChangeLog 256 RMD160 b593596edc523387bb3d0262d69f5be37ece3f90 SHA1 0340dc243d79d8f6741b0956d2df7caa4d400405 SHA256 21902844e7e51b7f5e75252ed595c54979411d701b447fd36799ec3ff1d66e9c
+MISC metadata.xml 297 RMD160 dcd033d6792ff12fe189d2171e65a2e3e85757ec SHA1 4e17f752f013e23d55be5ee04dc0d9fe821e6564 SHA256 52deac29ec96a0863fb886de592500bfd2e3e91a5027a4234444a1b862df2690
