@@ -3,5 +3,5 @@ EBUILD holland-1.0.4-r1.ebuild 1775 RMD160 152fe8d0053591cc88e9b6ae3a6fc80ee03c6
 EBUILD holland-1.0.4-r2.ebuild 1594 RMD160 54784fa5e124868b779c1058c698fa86b281a8dc SHA1 25e009cdfe535d4ca90d6946d3efa9a23189ada3 SHA256 54c6b3a0d2464cb672f1329742efa24fc3e3d790ab41f9f877c391527c8bfbef
 EBUILD holland-1.0.4.ebuild 1585 RMD160 f3e14024231ce5cb4973ea4c0fc66d373e762827 SHA1 cfe5d55fd88c7d491e8688484f1c6ef6d9ae0175 SHA256 a128488986ab751a499158cd04a965892a58542b6a1354f11e8b7620380f0c18
 EBUILD holland-9999.ebuild 1564 RMD160 1f7d3460e518bd845dfdf648bb19a578db0c5fb7 SHA1 6b9a0c8fb2a49378affcced14670bc0c868da5ea SHA256 046bcc645c9ea4e352b3b06be8f2cd4c619ac57caa03c10c49a2b0d69b5f3171
-MISC ChangeLog 575 RMD160 d8a8c98cbf56a9a969e6770748e9bb49f52ed2c7 SHA1 f764973d5e1ecf14de81cd1a374900c84e3785ba SHA256 c6e2c0a0a52580336f3f81556d795842bf6aab485e8504bbe6a951b7fcdda336
+MISC ChangeLog 689 RMD160 839fb00e9951d867d65e7922ddf73fb13e88ddf1 SHA1 448a8fae7d44ee1279e69d5e48934c965507358c SHA256 e3d17207e1c6f31850dfb097ea6d648c82d950a94b6694b010552133130101f3
 MISC metadata.xml 603 RMD160 b5a61a40c313a0b700b0095fa2ce16ad492c8c67 SHA1 1b15005e449f160f80359ecb6731e2bf089c4acf SHA256 9911f4f422ca09f4d3011a6f998b9d170a9d46e6ddbb452fd2ed9ec638fde66b
