@@ -1,0 +1,9 @@
+# ChangeLog for app-admin/puppet-module
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*puppet-module-0.3.0 (19 Dec 2010)
+
+  19 Dec 2010; <alunduil@gentoo.org> +puppet-module-0.3.0.ebuild:
+  Adding puppet-module-0.3.0
+
