@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*holland-1.0.5 (17 Dec 2010)
+
+  17 Dec 2010; <alunduil@gentoo.org> +holland-1.0.5.ebuild:
+  Adding holland-1.0.5
+
   03 Oct 2010; <alunduil@gentoo.org> -holland-1.0.2-r9.ebuild,
   -holland-1.0.2-r10.ebuild:
   Removing version 1.0.2
